Version-1 | Alignment fixes

--- a/portfolio/src/app/modules/home/home.component.scss
+++ b/portfolio/src/app/modules/home/home.component.scss
@@ -56,14 +56,14 @@
 @media (max-width: 768px) {
     .home {
         text-align: center;
-        gap: 3rem;
+        gap: 0rem;
     }
 
     .home .image img {
         // height: 30rem;
         // width: 30rem;
-        height: 45rem;
-        width: 40rem;
+        height: 47rem;
+        width: 38rem;
     }
 
     .home .content h3 {
