--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -45,7 +45,9 @@ body {
 }
 
 section {
-    padding: 5rem 9%;
+    // padding: 5rem 9%;
+    padding: 7vh 9%;
+    padding: 7svh 9%;
 }
 
 a {
